# mmx-worker-bridge

./: .gitignore  Install.md  LICENSE  README.md  README.zh-CN.md  README_en.md  SECURITY.md  pyproject.toml
docs/: claude.md  codex.md  examples.md  release.md  safety.md
examples/claude-workflow/: AGENTS.md
examples/codex-skill/: SKILL.md
src/mmx_worker_bridge/: __init__.py  batch.py  cli.py  client.py  core.py  patch_review.py  tools.py  worker.py  worktree.py
tests/: test_bridge.py
