[project]
name = "mmx-worker-bridge"
version = "0.1.0"
description = "MiniMax-powered external coding workers for Codex and Claude workflows."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "mmx-worker-bridge contributors"}
]

[project.scripts]
mmx-worker-bridge = "mmx_worker_bridge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

